--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>T9 Dialer</h1>
+      <h1 id="title">T9 Dialer</h1>
       <p>Arranged from <a href="https://codepen.io/edball/pen/EVMaVN">DTMF Tones in Web Audio</a></p>
       <ul class="dtmf-interface js-dtmf-interface">
         <li><span>1</span></li>
