--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
       <h1 id="title">T9 Dialer</h1>
       <p>Arranged from <a href="https://codepen.io/edball/pen/EVMaVN">DTMF Tones in Web Audio</a></p>
       <ul class="dtmf-interface js-dtmf-interface">
-        <li><span>1</span></li>
-        <li><span>2</span><span>A B C</span></li>
-        <li><span>3</span><span>D E F</span></li>
-        <li><span>4</span><span>G H I</span></li>
-        <li><span>5</span><span>J K L</span></li>
-        <li><span>6</span><span>M N O</span></li>
-        <li><span>7</span><span>P Q R S</span></li>
-        <li><span>8</span><span>T U V</span></li>
-        <li><span>9</span><span>W X Y Z</span></li>
-        <li><span>*</span></li>
-        <li><span>0</span></li>
-        <li><span>#</span></li>
+        <li id="1">1</li>
+        <li id="2">2<span>A B C</span></li>
+        <li id="3">3<span>D E F</span></li>
+        <li id="4">4<span>G H I</span></li>
+        <li id="5">5<span>J K L</span></li>
+        <li id="6">6<span>M N O</span></li>
+        <li id="7">7<span>P Q R S</span></li>
+        <li id="8">8<span>T U V</span></li>
+        <li id="9">9<span>W X Y Z</span></li>
+        <li id="*"><img src="icons/corner-down-left.svg" /></li>
+        <li id="0"><img src="icons/send.svg" /></li>
+        <li id="#"><img src="icons/printer.svg" /></li>
       </ul>
     </div>
 
