--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>T9 Dialer</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <div class="wrapper">
